<resources>
    <string name="app_name">Urban Ride</string>
    <string name="title_ride">Ride</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="average_speed">Average speed</string>
    <string name="duration">Duration</string>

    <string name="_0_0_km">0.0 km</string>
    <string name="_0_km_h">0 km/h</string>
    <string name="_00_00_00">00:00:00</string>

    <string name="km">%1$s km</string>
    <string name="km_h">%1$s km/h</string>
    <string name="miles">%1$s miles</string>
    <string name="miles_h">%1$s mph</string>
    <string name="max_speed">Max speed</string>
    <string name="avg_speed">Avg. speed</string>

    <string name="distance_share_image">Distance %1$s km</string>
    <string name="duration_share_image">Duration %1$s</string>

    <string name="units_kilometers">Kilometers</string>
    <string name="units_miles">Miles</string>

    <string name="dark_theme_pref_key">dark_theme_pref_key</string>
    <string name="unit_system_pref_key">"UNITS_KEY"</string>
    <string name="history_date_pattern">dd.MM.yy</string>
    <string name="history_time_pattern">HH:mm</string>
    <string name="permission_toast">This application require Location permission to work properly</string>
    <string name="graph_time_axis">time (minutes)</string>
    <string name="graph_speed_axis_km">speed (km/h)</string>
    <string name="graph_speed_axis_mile">speed (mile/h)</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="graph_distance_axis_km">distance (km)</string>
    <string name="graph_distance_axis_mile">distance (mile)</string>

    <string name="content_values_mime_type">image/jpeg</string>
    <string name="share_intent_type">image/*</string>
    <string name="check_internet_connection">Check Internet connection</string>
    <string name="location_option_required">This application requires location option turned on</string>
    <string name="open_settings">Open settings</string>
    <string name="cancel">Cancel</string>
    <string name="no_saved_rides">No saved rides</string>
</resources>