<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_ride">

    <action android:id="@+id/action_ridingFragment"
        app:destination="@id/navigation_ride"
        app:launchSingleTop="true"/>

    <fragment
        android:id="@+id/navigation_ride"
        android:name="com.andrewsozonov.urbanride.presentation.ride.RideFragment"
        android:label="@string/title_ride"
        tools:layout="@layout/fragment_ride" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.andrewsozonov.urbanride.presentation.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_navigation_history_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.andrewsozonov.urbanride.presentation.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.andrewsozonov.urbanride.presentation.map.MapFragment"
        android:label="map_fragment"
        tools:layout="@layout/map_fragment" >
        <action
            android:id="@+id/action_mapFragment_to_navigation_history"
            app:destination="@id/navigation_history" />
    </fragment>

</navigation>