<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/light_cyan"
        android:elevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/non_expandable_root_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/date_field_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="date"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/date_textView"
                    app:layout_constraintEnd_toEndOf="@id/date_textView"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@id/date_textView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/date_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="@dimen/margin_between_name_and_field"
                    android:text="04.10.21"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/date_field_name" />

                <TextView
                    android:id="@+id/start_field_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="start"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/start_textView"
                    app:layout_constraintEnd_toEndOf="@id/start_textView"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@id/start_textView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/start_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_between_name_and_field"
                    android:layout_marginEnd="15dp"
                    android:text="10:45"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/arrow_button"
                    app:layout_constraintTop_toBottomOf="@+id/start_field_name" />

                <TextView
                    android:id="@+id/finish_field_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="finish"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/finish_textView"
                    app:layout_constraintEnd_toEndOf="@id/finish_textView"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@id/finish_textView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/finish_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="@dimen/margin_between_name_and_field"
                    android:text="11:15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/arrow_button"
                    app:layout_constraintTop_toBottomOf="@+id/finish_field_name" />

                <TextView
                    android:id="@+id/duration_field_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="duration"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/duration_textView"
                    app:layout_constraintEnd_toEndOf="@id/duration_textView"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@id/duration_textView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/duration_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_between_name_and_field"
                    android:layout_marginEnd="15dp"
                    android:text="00:45:00"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/duration_field_name" />

                <Button
                    android:id="@+id/arrow_button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/arrow_up"
                    android:rotation="180"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandable_root_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/distance_field_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_between_fields"
                    android:text="@string/distance"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/distance_textView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/distance_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="@dimen/margin_between_name_and_field"
                    android:text="8.2 km"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/distance_field_name" />

                <View
                    android:id="@+id/separator1"
                    android:layout_width="60dp"
                    android:layout_height="@dimen/separator_width"
                    android:layout_marginTop="@dimen/margin_between_fields"
                    android:background="@drawable/separator"
                    app:layout_constraintStart_toStartOf="@id/distance_textView"
                    app:layout_constraintTop_toBottomOf="@id/distance_textView" />

                <TextView
                    android:id="@+id/average_speed_field_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_between_fields"
                    android:text="@string/avg_speed"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/distance_textView"
                    app:layout_constraintTop_toBottomOf="@id/separator1" />

                <TextView
                    android:id="@+id/average_speed_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_between_name_and_field"
                    android:text="14.5 km/h "
                    app:layout_constraintStart_toStartOf="@id/distance_textView"
                    app:layout_constraintTop_toBottomOf="@id/average_speed_field_name" />

                <View
                    android:id="@+id/separator2"
                    android:layout_width="60dp"
                    android:layout_height="@dimen/separator_width"
                    android:layout_marginTop="@dimen/margin_between_fields"
                    android:background="@drawable/separator"
                    app:layout_constraintStart_toStartOf="@id/distance_textView"
                    app:layout_constraintTop_toBottomOf="@id/average_speed_textView" />

                <TextView
                    android:id="@+id/max_speed_field_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_between_fields"
                    android:text="@string/max_speed"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/distance_textView"
                    app:layout_constraintTop_toBottomOf="@id/separator2" />

                <TextView
                    android:id="@+id/max_speed_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_between_name_and_field"
                    android:layout_marginBottom="15dp"
                    android:text="17.3 km/h"
                    app:layout_constraintStart_toStartOf="@id/distance_textView"
                    app:layout_constraintTop_toBottomOf="@id/max_speed_field_name" />

                <ImageButton
                    android:id="@+id/show_graph_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_between_name_and_field"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/ic_chart_icon"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:layout_constraintEnd_toEndOf="@id/max_speed_field_name"
                    app:layout_constraintBottom_toBottomOf="@id/history_map"/>

                <ImageView
                    android:id="@+id/history_map"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/imageview_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.9"
                    app:layout_constraintWidth_percent="0.7" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/graph_root_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/history_map" >


                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graph"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="@dimen/map_margin"/>
            </FrameLayout>





        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>